--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "theoryEnv.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --env-file=.env --watch app.js"
   },
   "repository": {
     "type": "git",
